--- a/desafios/d012/style.css
+++ b/desafios/d012/style.css
@@ -32,6 +32,7 @@ header h1{
     font-family: var(--fonte2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 
 header p{
@@ -55,6 +56,7 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -68,7 +70,8 @@ section.imagem{
 }
 
 section.imagem p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.289);
 }
 
