--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,9 @@
 @charset "UTF-8";
 
 /* Aparelho deitado (landscape)*/
+/* M N m n . , ; : */
+
+body {
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+}
