--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -4,6 +4,14 @@
 
 /* Todas as demais mídias */
 
+/* Tipical Devices Breakpoints
+Pequenas Telas: até 600px
+Celular: 600px até 768px
+Tablet: 769px até 992px
+Desktop: 992px até 1200px
+Grandes Telas:
+*/
+
 @media print {
     
 }
